# wp-open-api

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/en/: connector_guide.md  wp-model-core.md
docs/zh/: connector_guide.md  wp-model-core.md
wp-connector-api/: Cargo.toml
wp-connector-api/src/: lib.rs  types.rs
wp-connector-api/src/config/: adapter.rs  mod.rs  param.rs
wp-connector-api/src/errors/: mod.rs  sink.rs  source.rs
wp-connector-api/src/runtime/: cnn.rs  mod.rs  sink.rs
wp-connector-api/src/runtime/source/: event.rs  factory.rs  mod.rs  types.rs
wp-connector-api/tests/: demo_connector.rs
wp-model-core/: Cargo.toml
wp-model-core/src/: lib.rs  traits.rs
wp-model-core/src/model/: README.md  compare.rs  conv.rs  error.rs  fmt_def.rs  format.rs  macros.rs  mod.rs
wp-model-core/src/model/data/: field.rs  maker.rs  map.rs  mod.rs  record.rs
wp-model-core/src/model/types/: meta.rs  mod.rs
wp-model-core/src/model/types/value/: composite.rs  custom.rs  mod.rs  network.rs  primitive.rs  traits.rs
wp-parse-api/: Cargo.toml
wp-parse-api/src/: lib.rs
wp-parse-api/tests/: zero_copy_tests.rs
