[workspace]
members = [
    "wp-connector-api",
    "wp-model-core",
    "wp-parse-api",
]
resolver = "2"

[workspace.package]
# 统一包元数据；如需对外发布，请根据实际情况修改
edition = "2024"
version = "0.6.1"
license = "ELv2"
authors = ["WarpParse Dev Team"]

# 统一依赖版本，便于各 crate 使用 `workspace = true`
[workspace.dependencies]
arcstr = { version = "1", features = ["serde"] }
anyhow = "1"
async-trait = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.9"
once_cell = "1.21"
thiserror = "2"
derive_more = "2.1"
orion-error = "0.5.5"
lru = "0.12"
wildmatch = "2.6"
ipnet = "2.11"
contracts = "0.6"
derive-getters = "0.5"
chrono = { version = "0.4", features = ["serde"] }
mockall = "0.11"
derive_builder = "0.20.0"
smallvec = { version = "1.13", features = ["serde"] }
